src/objects/Persona__c.object
<CustomObject>
    <fields>
        <fullName>Apellidos__c</fullName>
        <label>Apellidos</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Check_VIGIA__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Check VIGIA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NIT_de_la_entidad__c</fullName>
        <label>NIT de la entidad</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nombre__c</fullName>
        <label>Nombre</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Numero_de_documento__c</fullName>
        <label>Número de documento</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oportunidad__c</fullName>
        <label>Oportunidad</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Personas</relationshipLabel>
        <relationshipName>Personas</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Pais_de_nacimiento__c</fullName>
        <label>País de nacimiento</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Porcentaje_participacion__c</fullName>
        <label>% de participación</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Razon_social__c</fullName>
        <label>Razón social</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tipo__c</fullName>
        <label>Tipo</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cliente</fullName>
                </value>
                <value>
                    <fullName>Representante Legal</fullName>
                </value>
                <value>
                    <fullName>Socio</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tipo_de_Documento__c</fullName>
        <label>Tipo de Documento</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cédula ciudadanía</fullName>
                </value>
                <value>
                    <fullName>Cédula de extranjería</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tipo_de_producto_a_adquirir__c</fullName>
        <label>Tipo de producto a adquirir</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cuenta de Ahorros</fullName>
                </value>
                <value>
                    <fullName>CDT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Persona</label>
    <nameField>
        <displayFormat>PER-{000000}</displayFormat>
        <label>Id Persona</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Personas</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Datos_obligatorios_Representante_Legal</fullName>
        <active>true</active>
        <description>Se deben ingresar los datos de la empresa para el Representante Legal</description>
        <errorConditionFormula>AND ( ISPICKVAL(Tipo__c, &apos;Representante Legal&apos;), OR ( NIT_de_la_entidad__c == &apos;&apos;, Razon_social__c == &apos;&apos;))</errorConditionFormula>
        <errorMessage>Se deben ingresar los datos de la empresa (Razón Social y NIT) para el Representante Legal</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Datos_obligatorios_Socio</fullName>
        <active>true</active>
        <errorConditionFormula>AND ( ISPICKVAL(Tipo__c, &apos;Socio&apos;), OR (  Pais_de_nacimiento__c  == &apos;&apos;,  Porcentaje_participacion__c == null))</errorConditionFormula>
        <errorMessage>Se deben ingresar los datos de Socio (País de Nacimiento y % de participación) para el tipo Socio</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>NIT_Numerico</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
 NIT_de_la_entidad__c != NULL,
 NOT( ISNUMBER(NIT_de_la_entidad__c) )
)</errorConditionFormula>
        <errorDisplayField>NIT_de_la_entidad__c</errorDisplayField>
        <errorMessage>El NIT de la entidad solamente puede contener números</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>No_personas_para_personas_naturales</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(Oportunidad__r.Tipo_de_persona__c, &apos;Natural&apos;)</errorConditionFormula>
        <errorMessage>No se pueden utilizar Personas para oportunidades de Personas Naturales</errorMessage>
    </validationRules>
</CustomObject>